--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,12 +17,12 @@
     <string name="action_register">Create an Account</string>
     <string name="action_login">Already have an account?</string>
     <string name="action_sign_in_short">Sign in</string>
-    <string name="welcome">Welcome!</string>
+    <string name="welcome">Welcome</string>
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">Login failed</string>
-    <string name="registration_failed">Account creation failed</string>
-    <string name="password_confirmation_failed">Password does not match</string>
+    <string name="registration_failed">Username already exists</string>
+    <string name="password_confirmation_failed">Passwords do not match</string>
     <string name="delete_user">Delete User</string>
     <string name="update_password">Update Password</string>
 </resources>
