--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="next">Next</string>
     <string name="previous">Previous</string>
     <string name="profile">Profile</string>
+    <string name="camera">Camera</string>
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
@@ -31,4 +32,18 @@
     <string name="landmark_description">Description</string>
     <string name="landmark_found_btn">Found it!</string>
     <string name="landmark_hint_btn">Hint?</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="prompt_title">Add a title</string>
+    <string name="prompt_description">Add a description</string>
+    <string name="prompt_hint">Add a hint</string>
+    <string name="prompt_difficulty">1-easy 5-hard</string>
+    <string name="action_create_landmark">Create Landmark</string>
+    <string name="divider_text">------------OR------------</string>
+    <string name="action_retry">Retry</string>
+    <string name="title_error">Title required</string>
+    <string name="desc_error">Description required</string>
+    <string name="hint_error">Hint required</string>
+    <string name="diff_error">Difficulty between 1 and 10 required</string>
 </resources>
