--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="next">Next</string>
     <string name="previous">Previous</string>
     <string name="profile">Profile</string>
+    <string name="back">Back</string>
     <string name="camera">Camera</string>
 
     <string name="hello_first_fragment">Hello first fragment</string>
